@@ -1421,6 +1421,17 @@ int ruby_vsnprintf(char *str, size_t n, char const *fmt, va_list ap);
 #define snprintf ruby_snprintf
 #define vsnprintf ruby_vsnprintf
 
+#ifdef __FreeBSD__
+#undef getpeername
+#define getpeername ruby_getpeername
+#undef getsockname
+#define getsockname ruby_getsockname
+#undef shutdown
+#define shutdown ruby_shutdown
+#undef close
+#define close ruby_close
+#endif
+
 #if defined(__cplusplus)
 #if 0
 { /* satisfy cc-mode */
